# aws-iot-validate-enclave-attestation

./: .gitignore  README.md
get_doc/: main.c
python/: README.md  example-attestation-doc.json  requirements.txt  validate.py
python/get-attestation-doc/: Dockerfile  client.py  requirements-client.txt  requirements.txt  run.sh  server.py
validate_doc/: Makefile.am  autogen.sh  configure.ac  main.c
